# shader-converter

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
dependencies/: CMakeLists.txt
patches/: dawn.patch
src/: callbacks.js  main.cpp  post.node.js  post.web.js  pre.js
