
set(ENABLE_EMSCRIPTEN_SINGLE_FILE OFF)
set(ENABLE_HLSL OFF)
set(ENABLE_OPT OFF)
set(ENABLE_GLSLANG_JS OFF)
set(ENABLE_GLSLANG_BINARIES OFF)
add_subdirectory(glslang EXCLUDE_FROM_ALL)

set(DAWN_GLSLANG_DIR ${CMAKE_CURRENT_SOURCE_DIR}/glslang)
set(DAWN_BUILD_PROTOBUF OFF)
set(DAWN_USE_GLFW OFF)
set(DAWN_BUILD_SAMPLES OFF)

set(TINT_BUILD_SPV_READER ON)
set(TINT_BUILD_WGSL_READER OFF)
set(TINT_BUILD_HLSL_WRITER OFF)
set(TINT_BUILD_MSL_WRITER OFF)
set(TINT_BUILD_SPV_WRITER OFF)
set(TINT_BUILD_WGSL_WRITER ON)
set(TINT_BUILD_GLSL_WRITER OFF)
set(TINT_BUILD_IR OFF)
set(TINT_BUILD_IR_BINARY OFF)
set(TINT_BUILD_CMD_TOOLS OFF)
add_subdirectory(dawn EXCLUDE_FROM_ALL)
target_compile_options(tint_utils_system PRIVATE "-Wno-disabled-macro-expansion")
